--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 header
 {
   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-  url(/Users/AngelJoel/Desktop/Website/pic1.jpg);
+  url(pic1.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
